--- a/admin.html
+++ b/admin.html
@@ -21,14 +21,14 @@
                 <div class="logo-icon">
                     <i class="fas fa-mug-hot"></i>
                 </div>
-                <div class="logo-text">SU<span>रुप्प</span> <small
+                <div class="logo-text" onclick="location.href='index.html'">SU<span>रुप्प</span> <small
                         style="font-size: 16px; color: var(--text-body);">Admin Portal</small></div>
             </div>
             <div class="admin-info">
                 <div class="admin-name">
                     <i class="fas fa-user-circle"></i> Admin User
                 </div>
-                <button class="logout-btn" onclick="logout()">
+                <button class="logout-btn">
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </button>
             </div>
