--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SUरुप्प • Authentic Nepali Tea Experience</title>
-    <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>☕</text></svg>" />
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Poppins:wght@300;400;500;600&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -155,7 +153,7 @@
 
                     <div class="form-group full">
                         <label for="order">Your Order</label>
-                        <textarea id="order" placeholder="Enter your tea order and any special requests"></textarea>
+                        <textarea id="order" placeholder="Your order will be displayed here."></textarea>
                     </div>
 
                     <div class="form-group full">
@@ -176,14 +174,9 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>Authentic Nepali Tea Experience</h2>
-                    <p>SUरुप्प was born from a passion to share the rich tea culture of Nepal with the world. Our
-                        founders, third-generation tea growers from the Ilam region, bring decades of expertise in
-                        cultivating and brewing the finest Himalayan teas.</p>
-                    <p>We source our leaves directly from sustainable tea gardens in Nepal's eastern hills, where high
-                        altitude and misty conditions create the perfect environment for tea cultivation. Each blend is
-                        carefully crafted to preserve traditional flavors while appealing to modern palates.</p>
-                    <p>Our mission is to deliver an authentic Nepali tea experience - not just a beverage, but a moment
-                        of connection and tranquility.</p>
+                    <p>We source our tea leaves directly from the lush gardens of eastern Nepal, where the cool, misty hills of Ilam create the perfect conditions for growing rich, flavorful tea. These leaves come from farms that follow sustainable practices and carry generations of tradition.</p>
+                    <p>Our blends are crafted to keep the original taste of Nepali chiya alive, while also offering something refreshing for today's tea lovers. We aim for a balance—something that feels both familiar and new.</p>
+                    <p>With SUरुप्प, we're not just serving tea—we're sharing a moment. A small break in a busy day, a connection between friends, or a quiet sip of calm. That's the experience we want to bring to every cup.</p>
                     <a href="#" class="btn btn-outline">Learn More</a>
                 </div>
                 <div class="about-image">
@@ -223,7 +216,7 @@
                     <h3 class="footer-title">Contact Us</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Kathmandu, Nepal</p>
                     <p><i class="fas fa-phone"></i> +977 9841XXXXXX</p>
-                    <p><i class="fas fa-envelope"></i> info@suraupp.com</p>
+                    <p><i class="fas fa-envelope"></i> info@surauppa.com</p>
                     <p><i class="fas fa-clock"></i> Open Daily: 7AM - 9PM</p>
                 </div>
             </div>
@@ -233,6 +226,7 @@
             </div>
         </div>
     </footer>
+    
     
 </body>
 
