--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
                 <i class="fas fa-mug-hot"></i>
             </div>
             <h1 class="login-title">SUरुप्प Admin Login</h1>
-            <p class="login-subtitle">Manage orders and menu items with ease</p>
+            <p class="login-subtitle">This page can only be accessed by admin!</p>
             <form>
                 <label>Email</label>
                 <input type="email" placeholder="admin@suruppa.com">
@@ -27,9 +27,13 @@
                     <button type="button" onclick="location.href='admin.html'">Login</button>
                 </a>
             </form>
+            <div id="go-back" onclick="location.href='index.html'">
+                <p><u>Click here to go back.</u></p>
+            </div>
         </div>
     </main>
 
+    
     <footer>
         © 2025 SUरुप्प Digital Tea House. All rights reserved.
     </footer>
